# qt_c-ASIS

cpptodo/: CMakeLists.txt  accueilwidget.cpp  accueilwidget.h  assistantwidget.cpp  assistantwidget.h  authmanager.cpp  authmanager.h  loginwidget.cpp  loginwidget.h  main.cpp  planningwidget.cpp  planningwidget.h  sessionmanager.cpp  sessionmanager.h  statswidget.cpp  statswidget.h  style.qss  timer.cpp  timer.h  todowidget.cpp  todowidget.h
cpptodo/.qtcreator/: CMakeLists.txt.user.c194dda  CMakeLists.txt.user.d268a90
