cmake_minimum_required(VERSION 3.16)
project(cpptodo VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Sql)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql)

set(PROJECT_SOURCES
    main.cpp

    # ── Accueil ──────────────────────────────────────
    accueilwidget.h
    accueilwidget.cpp

    # ── Timer ────────────────────────────────────────
    timer.h
    timer.cpp

    # ── Todo ─────────────────────────────────────────
    todowidget.h
    todowidget.cpp

    # ── Auth ─────────────────────────────────────────
    loginwidget.h
    loginwidget.cpp
    authmanager.h
    authmanager.cpp

    # ── Sessions & Statistiques (Premium) ────────────
    sessionmanager.h
    sessionmanager.cpp
    statswidget.h
    statswidget.cpp
    planningwidget.h
    planningwidget.cpp

    # ── Assistant animé ───────────────────────────────
    assistantwidget.h
    assistantwidget.cpp
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(cpptodo
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
else()
    if(ANDROID)
        add_library(cpptodo SHARED
            ${PROJECT_SOURCES}
        )
    else()
        add_executable(cpptodo
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(cpptodo PRIVATE
    Qt${QT_VERSION_MAJOR}::Widgets
    Qt${QT_VERSION_MAJOR}::Sql
)

if(${QT_VERSION} VERSION_LESS 6.1.0)
    set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.cpptodo)
endif()

set_target_properties(cpptodo PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS cpptodo
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(cpptodo)
endif()
